--- a/gatsby-labs-journal/src/components/layout.css
+++ b/gatsby-labs-journal/src/components/layout.css
@@ -43,6 +43,8 @@ template {
 a {
   background-color: transparent;
   -webkit-text-decoration-skip: objects;
+  text-decoration: none;
+  color: #333;
 }
 a:active,
 a:hover {
@@ -232,8 +234,7 @@ h1 {
   padding-top: 0;
   margin-bottom: 1.45rem;
   color: inherit;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  font-family: 'Raleway';
   font-weight: bold;
   text-rendering: optimizeLegibility;
   font-size: 2.25rem;
@@ -379,6 +380,7 @@ dd {
   margin-bottom: 1.45rem;
 }
 p {
+  font-family: 'Oswald';
   margin-left: 0;
   margin-right: 0;
   margin-top: 0;
